--- a/ferry.properties
+++ b/ferry.properties
@@ -2,64 +2,24 @@
 #Wed Jul 22 17:39:12 EDT 2015
 #Vertafore Enterprise Analytics, 2015
 
+################################################################################
+##REQUIRED CONFIGS
+################################################################################
+ferryID=ellisislanddemo
+
 ##Table configs
-tableName=nxgnratingevent
+tableName=ellisislanddemo
 rowKey=rowkey
-columnsName=ratingeventid, sessionid, responseurl, payload, applicationid, companyunitid, knockout ,  eventdatetime, ratingeventtypeid, ratingenginetypeid
+columnsName=payload
 
 ################################################################################
-##KAFKA CONFIGS
+##OPTIONAL CONFIGS
 ################################################################################
-kafkaBroker=kafkabroker.vertafore.com:6667
-kafkaTopic=sample_nxgn_hdfs_topic
-zookeeperHost=zookeeperhost.vertafore.com
-serializerClass=kafka.serializer.StringEncoder
-#Depending on size of each individual line of stream, you may need to increase your fetch-size.  Uncomment the value below and change it to an appropriate size.
-#fetchSize=1024*1024*5
+fetchSize=10485760
 
-################################################################################
-##STORM TOPOLOGY CONFIGS
-################################################################################
-##Storm-Kafka Configs
-stormBroker=stormbroker.vertafore.com:2181
-spoutID=sampleNXGNSpout
-zookeeperRoot=/ellisislandtesttopic
-
-##Storm Topology
+#If you wish to use the default delimiter "\001", input "\\001" below
 fieldDelimiter=\\001
 
-##HDFS Topology
-hdfsTopologyID=ellisIslandTopology
-#This HDFS Path must be within /datalake/ellisisland, as that is the only directory currently with write permissions for outside data
-hdfsPath=/datalake/ellisisland/nextgen/test/
-hdfsBoltID=sampleNXTGNBolt
-fsURL=hdfs://namenode.vertafore.com.com:8020
-
-##Hive Topology
-hiveTopologyID=hiveTopo
-hiveBoltID=hiveBolt
-
-##HBase Topology
-hbaseTopologyID=hbaseTopo
-hbaseBoltID=hbaseBolt
-
-#Probably don't need to touch items below line
-################################################################################
-#Storm Kafka Spout
+#This is the number of rows before Storm-Hive writes, so for smaller topologies, a smaller batch is ideal
+batchSize=10
 forceFromStart=true
-
-##Hive Configs
-hiveConnectString=jdbc:hive2://hiveserver.vertafore.com
-hiveUser=username
-hivePw=password
-hiveDB=ellisisland
-hiveMetaStoreURI=thrift://hiveserver.vertafore.com:9083
-
-##Kafka SQL Server Producer Configs
-#Use this section if you wish to import from a SQL Server database
-jdbc=jdbc:microsoft:sqlserver://sqlmachine.vertafore.com
-serverName=sampleServer
-portNumber=1433
-databaseName=TransactionLog
-userName=username
-password=password
