--- a/ferry.properties
+++ b/ferry.properties
@@ -5,21 +5,33 @@
 ################################################################################
 ##REQUIRED CONFIGS
 ################################################################################
-ferryID=ellisislanddemo
+ferryID=SAMPLE_FERRY_ID
 
 ##Table configs
-tableName=ellisislanddemo
-rowKey=rowkey
-columnsName=payload
+tableName=SAMPLE_FERRY_ID
+rowKey=quoteid
+columnsName=payload, timestamp, sourceid
 
 ################################################################################
 ##OPTIONAL CONFIGS
 ################################################################################
-fetchSize=10485760
+
+#This property should be at least as big as the maxMessageBytes, or else messages produced could be bigger than messages consumed
+fetchSize=4194304
 
 #If you wish to use the default delimiter "\001", input "\\001" below
 fieldDelimiter=\\001
 
 #This is the number of rows before Storm-Hive writes, so for smaller topologies, a smaller batch is ideal
 batchSize=10
+
+#True if you want to write all message from beginning of topic, false to write from this point forward
 forceFromStart=true
+
+#TODO
+
+#Upper limit of writeable messages to a ferry.
+#maxMessageBytes=4194304
+
+#Retention period of a message in a ferry.  Default 7*60*24
+#retention.ms=
