--- a/ferry.properties
+++ b/ferry.properties
@@ -26,7 +26,7 @@ fieldDelimiter=\\001
 batchSize=10
 
 #True if you want to write all message from beginning of topic, false to write from this point forward
-forceFromStart=true
+forceFromStart=false
 
 #TODO
 
